--- a/css/less/index.less
+++ b/css/less/index.less
@@ -1,13 +1,15 @@
-html,
-body {
+html, body {
   padding: 0;
   margin: 0;
+
   height: 100%;
   width: 100%;
 }
+
 #blossom-header-container {
   height: 100%;
   width: 100%;
   background-image: url('/img/cb-bg.jpg');
   background-size: cover;
 }
+
