--- a/css/index.css
+++ b/css/index.css
@@ -35,6 +35,11 @@ a {
 #blossom-header-container #name-header h6 {
   font-size: 12px;
 }
+#hacker-container {
+  height: 100%;
+  width: 100%;
+  background-color: #008fd4;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
