--- a/css/less/index.less
+++ b/css/less/index.less
@@ -45,6 +45,12 @@ a {
   }
 }
 
+#hacker-container {
+  height: 100%;
+  width: 100%;
+  background-color: #008fd4;
+}
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
