Add GH username

--- a/css/less/index.less
+++ b/css/less/index.less
@@ -75,10 +75,14 @@ a {
         }
       }
 
+      a {
+        text-decoration: none;
+      }
+
       .fa-github {
         margin-top: 130px;
         font-size: 150px;
-        transition: 50ms ease-in-out;
+        transition: 75ms ease-in-out;
 
         &:hover {
           font-size: 170px;
