--- a/css/index.css
+++ b/css/index.css
@@ -62,10 +62,13 @@ a {
   margin: 30px 0;
   font-family: 'Pacifico', cursive;
 }
+#hacker-container .hacker-bg-mask .content-container a {
+  text-decoration: none;
+}
 #hacker-container .hacker-bg-mask .content-container .fa-github {
   margin-top: 130px;
   font-size: 150px;
-  transition: 50ms ease-in-out;
+  transition: 75ms ease-in-out;
 }
 #hacker-container .hacker-bg-mask .content-container .fa-github:hover {
   font-size: 170px;
