Add commented out code for hax swapping

--- a/css/less/index.less
+++ b/css/less/index.less
@@ -68,7 +68,7 @@ a {
           font-weight: 400;
         }
 
-        h1.hax {
+        h1#hax {
           font-size: 80px;
           margin: 30px 0;
           font-family: 'Pacifico', cursive;
@@ -77,21 +77,24 @@ a {
 
       a {
         text-decoration: none;
+        color: rgba(255, 255, 255, 0.6);
       }
 
       .fa-github {
         margin-top: 130px;
         font-size: 150px;
-        transition: 75ms ease-in-out;
+        transition: 125ms ease-in-out;
 
         &:hover {
           font-size: 170px;
+          color: rgba(255, 255, 255, 0.8);
         }
       }
     }
-
   }
 }
+
+
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
