--- a/css/index.css
+++ b/css/index.css
@@ -57,21 +57,23 @@ a {
   font-size: 60px;
   font-weight: 400;
 }
-#hacker-container .hacker-bg-mask .content-container .text-container h1.hax {
+#hacker-container .hacker-bg-mask .content-container .text-container h1#hax {
   font-size: 80px;
   margin: 30px 0;
   font-family: 'Pacifico', cursive;
 }
 #hacker-container .hacker-bg-mask .content-container a {
   text-decoration: none;
+  color: rgba(255, 255, 255, 0.6);
 }
 #hacker-container .hacker-bg-mask .content-container .fa-github {
   margin-top: 130px;
   font-size: 150px;
-  transition: 75ms ease-in-out;
+  transition: 125ms ease-in-out;
 }
 #hacker-container .hacker-bg-mask .content-container .fa-github:hover {
   font-size: 170px;
+  color: rgba(255, 255, 255, 0.8);
 }
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
