--- a/css/index.css
+++ b/css/index.css
@@ -37,7 +37,7 @@ a {
   font-size: 12px;
 }
 #hacker-container {
-  height: 100%;
+  height: 110%;
   width: 100%;
   background-image: url('../img/cb2-bg.jpg');
   background-size: cover;
@@ -47,7 +47,7 @@ a {
 #hacker-container .hacker-bg-mask {
   height: 100%;
   width: 100%;
-  background-color: rgba(0, 143, 212, 0.8);
+  background-color: rgba(0, 143, 212, 0.7);
   text-align: center;
 }
 #hacker-container .hacker-bg-mask .content-container {
@@ -74,6 +74,19 @@ a {
 #hacker-container .hacker-bg-mask .content-container .fa-github:hover {
   font-size: 170px;
   color: rgba(255, 255, 255, 0.8);
+}
+#music-container {
+  height: 100%;
+  width: 100%;
+  background-image: url('../img/cb4-bg.jpg');
+  background-size: cover;
+  overflow: hidden;
+  position: relative;
+}
+#music-container .music-bg-mask {
+  height: 100%;
+  width: 100%;
+  background-color: rgba(224, 66, 49, 0.7);
 }
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
