--- a/css/less/index.less
+++ b/css/less/index.less
@@ -46,7 +46,7 @@ a {
 }
 
 #hacker-container {
-  height: 100%;
+  height: 110%;
   width: 100%;
   background-image: url('../img/cb2-bg.jpg');
   background-size: cover;
@@ -56,7 +56,7 @@ a {
   .hacker-bg-mask {
     height: 100%;
     width: 100%;
-    background-color: rgba(0,143,212,0.8);
+    background-color: rgba(0,143,212,0.7);
     text-align: center;
 
     .content-container {
@@ -91,6 +91,22 @@ a {
         }
       }
     }
+  }
+}
+
+#music-container {
+  height: 100%;
+  width: 100%;
+  background-image: url('../img/cb4-bg.jpg');
+  background-size: cover;
+
+  overflow: hidden;
+  position: relative;
+
+  .music-bg-mask {
+    height: 100%;
+    width: 100%;
+    background-color: rgba(224,66,49, 0.7);
   }
 }
 
