--- a/css/index.css
+++ b/css/index.css
@@ -75,7 +75,7 @@ a {
   font-size: 170px;
   color: rgba(255, 255, 255, 0.8);
 }
-#music-container {
+#portfolio-container {
   height: 100%;
   width: 100%;
   background-image: url('../img/cb4-bg.jpg');
@@ -83,10 +83,37 @@ a {
   overflow: hidden;
   position: relative;
 }
-#music-container .music-bg-mask {
+#portfolio-container .portfolio-bg-mask {
   height: 100%;
   width: 100%;
   background-color: rgba(224, 66, 49, 0.7);
+}
+#portfolio-container .portfolio-bg-mask .portfolio {
+  padding: 60px;
+}
+#portfolio-container .portfolio-bg-mask .portfolio h1 {
+  font-size: 60px;
+  font-weight: 400;
+  padding-bottom: 50px;
+}
+#portfolio-container .portfolio-bg-mask .portfolio .item {
+  padding: 5px;
+  width: 250px;
+  display: block;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  text-decoration: none;
+  line-height: 1.3em;
+  border-bottom: 1px solid white;
+  transition: background 150ms ease-out;
+}
+#portfolio-container .portfolio-bg-mask .portfolio .item:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+#portfolio-container .portfolio-bg-mask .portfolio .item .workplace {
+  display: block;
+  font-size: 25px;
+  line-height: 1.7em;
 }
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
