--- a/css/less/index.less
+++ b/css/less/index.less
@@ -16,7 +16,7 @@ a {
 }
 
 #blossom-header-container {
-  min-height: 100%;
+  height: 100%;
   width: 100%;
   background-image: url('../img/cb-bg.jpg');
   background-size: cover;
@@ -46,7 +46,7 @@ a {
 }
 
 #hacker-container {
-  min-height: 110%;
+  height: 110%;
   width: 100%;
   background-image: url('../img/cb2-bg.jpg');
   background-size: cover;
@@ -95,7 +95,7 @@ a {
 }
 
 #portfolio-container {
-  min-height: 100%;
+  height: 100%;
   width: 100%;
   background-image: url('../img/cb4-bg.jpg');
   background-size: cover;
